// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Sizes Respects lg size 1`] = `
<div
  class="badge badge-neutral badge-lg"
>
  <span>
    testing 
    lg
     button size
  </span>
</div>
`;

exports[`Badge Sizes Respects md size 1`] = `
<div
  class="badge badge-neutral badge-md"
>
  <span>
    testing 
    md
     button size
  </span>
</div>
`;

exports[`Badge Sizes Respects sm size 1`] = `
<div
  class="badge badge-neutral badge-sm"
>
  <span>
    testing 
    sm
     button size
  </span>
</div>
`;

exports[`Badge Sizes Respects xs size 1`] = `
<div
  class="badge badge-neutral badge-xs"
>
  <span>
    testing 
    xs
     button size
  </span>
</div>
`;

exports[`Badge Variants Respects accent variant 1`] = `
<div
  class="badge badge-accent badge-md"
>
  <span>
    testing 
    accent
     variant
  </span>
</div>
`;

exports[`Badge Variants Respects error variant 1`] = `
<div
  class="badge badge-error badge-md"
>
  <span>
    testing 
    error
     variant
  </span>
</div>
`;

exports[`Badge Variants Respects info variant 1`] = `
<div
  class="badge badge-info badge-md"
>
  <span>
    testing 
    info
     variant
  </span>
</div>
`;

exports[`Badge Variants Respects neutral variant 1`] = `
<div
  class="badge badge-neutral badge-md"
>
  <span>
    testing 
    neutral
     variant
  </span>
</div>
`;

exports[`Badge Variants Respects primary variant 1`] = `
<div
  class="badge badge-primary badge-md"
>
  <span>
    testing 
    primary
     variant
  </span>
</div>
`;

exports[`Badge Variants Respects secondary variant 1`] = `
<div
  class="badge badge-secondary badge-md"
>
  <span>
    testing 
    secondary
     variant
  </span>
</div>
`;

exports[`Badge Variants Respects success variant 1`] = `
<div
  class="badge badge-success badge-md"
>
  <span>
    testing 
    success
     variant
  </span>
</div>
`;

exports[`Badge Variants Respects warning variant 1`] = `
<div
  class="badge badge-warning badge-md"
>
  <span>
    testing 
    warning
     variant
  </span>
</div>
`;
